EscapeDSL/src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from src/Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseEscapeRoom -> GameDefinitions          (0)
	GameDefinitions -> Definition                      (1)
	GameDefinitions -> GameDefinitions Definition      (2)
	Definition -> game '{' Declarations '}'            (3)
	Definition -> target type '{' Declarations '}'     (4)
	Definition -> object type '{' Declarations '}'     (5)
	Declarations -> Declaration                        (6)
	Declarations -> Declarations Declaration           (7)
	Declaration -> elements ':' '[' Elements ']'       (8)
	Declaration -> init ':' '[' Assignments ']'        (9)
	Declaration -> actions ':' '[' Actions ']'         (10)
	Declaration -> unlock ':' '[' UnlockConditions ']'   (11)
	UnlockConditions -> BoolExp                        (12)
	UnlockConditions -> BoolExp ',' UnlockConditions   (13)
	Actions ->                                         (14)
	Actions -> Action                                  (15)
	Actions -> Action ',' Actions                      (16)
	Action -> ident '(' Elements ')' ActionReturnType "->" Command   (17)
	ActionReturnType ->                                (18)
	ActionReturnType -> as type                        (19)
	Command -> Assignment                              (20)
	Command -> ChainedBase                             (21)
	Command -> return Exp                              (22)
	Command -> show Exp                                (23)
	Elements ->                                        (24)
	Elements -> Element                                (25)
	Elements -> Element ',' Elements                   (26)
	Element -> type ident                              (27)
	Assignments ->                                     (28)
	Assignments -> Assignment                          (29)
	Assignments -> Assignment ',' Assignments          (30)
	Assignment -> ident '=' Exp                        (31)
	Exp -> SimpleExp                                   (32)
	Exp -> ComparisonExp                               (33)
	SimpleExp -> Chained                               (34)
	SimpleExp -> number                                (35)
	SimpleExp -> string                                (36)
	ComparisonExp -> SimpleExp "==" SimpleExp          (37)
	ComparisonExp -> SimpleExp "!=" SimpleExp          (38)
	BoolExp -> AndExp                                  (39)
	BoolExp -> BoolExp "||" AndExp                     (40)
	AndExp -> NotExp                                   (41)
	AndExp -> AndExp "&&" NotExp                       (42)
	NotExp -> AtomicBool                               (43)
	NotExp -> "!" NotExp                               (44)
	AtomicBool -> true                                 (45)
	AtomicBool -> false                                (46)
	AtomicBool -> ComparisonExp                        (47)
	AtomicBool -> '(' BoolExp ')'                      (48)
	Chained -> ChainedBase                             (49)
	ChainedBase -> ident                               (50)
	ChainedBase -> ident '(' Args ')'                  (51)
	ChainedBase -> ChainedBase '.' ident               (52)
	ChainedBase -> ChainedBase '.' ident '(' Args ')'   (53)
	Args ->                                            (54)
	Args -> ident                                      (55)
	Args -> ident ',' Args                             (56)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	game           { TokenGame }
	target         { TokenTarget }
	object         { TokenObject }
	unlock         { TokenUnlock }
	elements       { TokenElements }
	init           { TokenInit }
	actions        { TokenActions }
	return         { TokenReturn }
	as             { TokenAs }
	show           { TokenShow }
	true           { TokenTrue }
	false          { TokenFalse }
	'{'            { TokenLBrace }
	'}'            { TokenRBrace }
	'['            { TokenLBracket }
	']'            { TokenRBracket }
	'('            { TokenLPar }
	')'            { TokenRPar }
	':'            { TokenColon }
	','            { TokenComma }
	'='            { TokenAssign }
	'.'            { TokenDot }
	"=="           { TokenEquals }
	"->"           { TokenArrow }
	"&&"           { TokenAnd }
	"||"           { TokenOr }
	"!"            { TokenNot }
	"!="           { TokenDistinct }
	ident          { TokenIdent $$ }
	type           { TokenType $$ }
	number         { TokenNumber $$ }
	string         { TokenString $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseEscapeRoom rule  0
	GameDefinitions rules 1, 2
	Definition      rules 3, 4, 5
	Declarations    rules 6, 7
	Declaration     rules 8, 9, 10, 11
	UnlockConditions rules 12, 13
	Actions         rules 14, 15, 16
	Action          rule  17
	ActionReturnType rules 18, 19
	Command         rules 20, 21, 22, 23
	Elements        rules 24, 25, 26
	Element         rule  27
	Assignments     rules 28, 29, 30
	Assignment      rule  31
	Exp             rules 32, 33
	SimpleExp       rules 34, 35, 36
	ComparisonExp   rules 37, 38
	BoolExp         rules 39, 40
	AndExp          rules 41, 42
	NotExp          rules 43, 44
	AtomicBool      rules 45, 46, 47, 48
	Chained         rule  49
	ChainedBase     rules 50, 51, 52, 53
	Args            rules 54, 55, 56

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseEscapeRoom -> . GameDefinitions         (rule 0)

	game           shift, and enter state 3
	target         shift, and enter state 4
	object         shift, and enter state 5

	GameDefinitionsgoto state 6
	Definition     goto state 2

State 1

	GameDefinitions -> . Definition                     (rule 1)

	game           shift, and enter state 3
	target         shift, and enter state 4
	object         shift, and enter state 5

	Definition     goto state 2

State 2

	GameDefinitions -> Definition .                     (rule 1)

	game           reduce using rule 1
	target         reduce using rule 1
	object         reduce using rule 1
	%eof           reduce using rule 1


State 3

	Definition -> game . '{' Declarations '}'           (rule 3)

	'{'            shift, and enter state 10


State 4

	Definition -> target . type '{' Declarations '}'    (rule 4)

	type           shift, and enter state 9


State 5

	Definition -> object . type '{' Declarations '}'    (rule 5)

	type           shift, and enter state 8


State 6

	%start_parseEscapeRoom -> GameDefinitions .         (rule 0)
	GameDefinitions -> GameDefinitions . Definition     (rule 2)

	game           shift, and enter state 3
	target         shift, and enter state 4
	object         shift, and enter state 5
	%eof           accept

	Definition     goto state 7

State 7

	GameDefinitions -> GameDefinitions Definition .     (rule 2)

	game           reduce using rule 2
	target         reduce using rule 2
	object         reduce using rule 2
	%eof           reduce using rule 2


State 8

	Definition -> object type . '{' Declarations '}'    (rule 5)

	'{'            shift, and enter state 18


State 9

	Definition -> target type . '{' Declarations '}'    (rule 4)

	'{'            shift, and enter state 17


State 10

	Definition -> game '{' . Declarations '}'           (rule 3)

	unlock         shift, and enter state 13
	elements       shift, and enter state 14
	init           shift, and enter state 15
	actions        shift, and enter state 16

	Declarations   goto state 11
	Declaration    goto state 12

State 11

	Definition -> game '{' Declarations . '}'           (rule 3)
	Declarations -> Declarations . Declaration          (rule 7)

	unlock         shift, and enter state 13
	elements       shift, and enter state 14
	init           shift, and enter state 15
	actions        shift, and enter state 16
	'}'            shift, and enter state 26

	Declaration    goto state 25

State 12

	Declarations -> Declaration .                       (rule 6)

	unlock         reduce using rule 6
	elements       reduce using rule 6
	init           reduce using rule 6
	actions        reduce using rule 6
	'}'            reduce using rule 6


State 13

	Declaration -> unlock . ':' '[' UnlockConditions ']'    (rule 11)

	':'            shift, and enter state 24


State 14

	Declaration -> elements . ':' '[' Elements ']'      (rule 8)

	':'            shift, and enter state 23


State 15

	Declaration -> init . ':' '[' Assignments ']'       (rule 9)

	':'            shift, and enter state 22


State 16

	Declaration -> actions . ':' '[' Actions ']'        (rule 10)

	':'            shift, and enter state 21


State 17

	Definition -> target type '{' . Declarations '}'    (rule 4)

	unlock         shift, and enter state 13
	elements       shift, and enter state 14
	init           shift, and enter state 15
	actions        shift, and enter state 16

	Declarations   goto state 20
	Declaration    goto state 12

State 18

	Definition -> object type '{' . Declarations '}'    (rule 5)

	unlock         shift, and enter state 13
	elements       shift, and enter state 14
	init           shift, and enter state 15
	actions        shift, and enter state 16

	Declarations   goto state 19
	Declaration    goto state 12

State 19

	Definition -> object type '{' Declarations . '}'    (rule 5)
	Declarations -> Declarations . Declaration          (rule 7)

	unlock         shift, and enter state 13
	elements       shift, and enter state 14
	init           shift, and enter state 15
	actions        shift, and enter state 16
	'}'            shift, and enter state 32

	Declaration    goto state 25

State 20

	Definition -> target type '{' Declarations . '}'    (rule 4)
	Declarations -> Declarations . Declaration          (rule 7)

	unlock         shift, and enter state 13
	elements       shift, and enter state 14
	init           shift, and enter state 15
	actions        shift, and enter state 16
	'}'            shift, and enter state 31

	Declaration    goto state 25

State 21

	Declaration -> actions ':' . '[' Actions ']'        (rule 10)

	'['            shift, and enter state 30


State 22

	Declaration -> init ':' . '[' Assignments ']'       (rule 9)

	'['            shift, and enter state 29


State 23

	Declaration -> elements ':' . '[' Elements ']'      (rule 8)

	'['            shift, and enter state 28


State 24

	Declaration -> unlock ':' . '[' UnlockConditions ']'    (rule 11)

	'['            shift, and enter state 27


State 25

	Declarations -> Declarations Declaration .          (rule 7)

	unlock         reduce using rule 7
	elements       reduce using rule 7
	init           reduce using rule 7
	actions        reduce using rule 7
	'}'            reduce using rule 7


State 26

	Definition -> game '{' Declarations '}' .           (rule 3)

	game           reduce using rule 3
	target         reduce using rule 3
	object         reduce using rule 3
	%eof           reduce using rule 3


State 27

	Declaration -> unlock ':' '[' . UnlockConditions ']'    (rule 11)

	true           shift, and enter state 51
	false          shift, and enter state 52
	'('            shift, and enter state 53
	"!"            shift, and enter state 54
	ident          shift, and enter state 55
	number         shift, and enter state 56
	string         shift, and enter state 57

	UnlockConditionsgoto state 42
	SimpleExp      goto state 43
	ComparisonExp  goto state 44
	BoolExp        goto state 45
	AndExp         goto state 46
	NotExp         goto state 47
	AtomicBool     goto state 48
	Chained        goto state 49
	ChainedBase    goto state 50

State 28

	Declaration -> elements ':' '[' . Elements ']'      (rule 8)

	']'            reduce using rule 24
	type           shift, and enter state 41

	Elements       goto state 39
	Element        goto state 40

State 29

	Declaration -> init ':' '[' . Assignments ']'       (rule 9)

	']'            reduce using rule 28
	ident          shift, and enter state 38

	Assignments    goto state 36
	Assignment     goto state 37

State 30

	Declaration -> actions ':' '[' . Actions ']'        (rule 10)

	']'            reduce using rule 14
	ident          shift, and enter state 35

	Actions        goto state 33
	Action         goto state 34

State 31

	Definition -> target type '{' Declarations '}' .    (rule 4)

	game           reduce using rule 4
	target         reduce using rule 4
	object         reduce using rule 4
	%eof           reduce using rule 4


State 32

	Definition -> object type '{' Declarations '}' .    (rule 5)

	game           reduce using rule 5
	target         reduce using rule 5
	object         reduce using rule 5
	%eof           reduce using rule 5


State 33

	Declaration -> actions ':' '[' Actions . ']'        (rule 10)

	']'            shift, and enter state 76


State 34

	Actions -> Action .                                 (rule 15)
	Actions -> Action . ',' Actions                     (rule 16)

	']'            reduce using rule 15
	','            shift, and enter state 75


State 35

	Action -> ident . '(' Elements ')' ActionReturnType "->" Command    (rule 17)

	'('            shift, and enter state 74


State 36

	Declaration -> init ':' '[' Assignments . ']'       (rule 9)

	']'            shift, and enter state 73


State 37

	Assignments -> Assignment .                         (rule 29)
	Assignments -> Assignment . ',' Assignments         (rule 30)

	']'            reduce using rule 29
	','            shift, and enter state 72


State 38

	Assignment -> ident . '=' Exp                       (rule 31)

	'='            shift, and enter state 71


State 39

	Declaration -> elements ':' '[' Elements . ']'      (rule 8)

	']'            shift, and enter state 70


State 40

	Elements -> Element .                               (rule 25)
	Elements -> Element . ',' Elements                  (rule 26)

	']'            reduce using rule 25
	')'            reduce using rule 25
	','            shift, and enter state 69


State 41

	Element -> type . ident                             (rule 27)

	ident          shift, and enter state 68


State 42

	Declaration -> unlock ':' '[' UnlockConditions . ']'    (rule 11)

	']'            shift, and enter state 67


State 43

	ComparisonExp -> SimpleExp . "==" SimpleExp         (rule 37)
	ComparisonExp -> SimpleExp . "!=" SimpleExp         (rule 38)

	"=="           shift, and enter state 65
	"!="           shift, and enter state 66


State 44

	AtomicBool -> ComparisonExp .                       (rule 47)

	']'            reduce using rule 47
	')'            reduce using rule 47
	','            reduce using rule 47
	"&&"           reduce using rule 47
	"||"           reduce using rule 47


State 45

	UnlockConditions -> BoolExp .                       (rule 12)
	UnlockConditions -> BoolExp . ',' UnlockConditions    (rule 13)
	BoolExp -> BoolExp . "||" AndExp                    (rule 40)

	']'            reduce using rule 12
	','            shift, and enter state 63
	"||"           shift, and enter state 64


State 46

	BoolExp -> AndExp .                                 (rule 39)
	AndExp -> AndExp . "&&" NotExp                      (rule 42)

	']'            reduce using rule 39
	')'            reduce using rule 39
	','            reduce using rule 39
	"&&"           shift, and enter state 62
	"||"           reduce using rule 39


State 47

	AndExp -> NotExp .                                  (rule 41)

	']'            reduce using rule 41
	')'            reduce using rule 41
	','            reduce using rule 41
	"&&"           reduce using rule 41
	"||"           reduce using rule 41


State 48

	NotExp -> AtomicBool .                              (rule 43)

	']'            reduce using rule 43
	')'            reduce using rule 43
	','            reduce using rule 43
	"&&"           reduce using rule 43
	"||"           reduce using rule 43


State 49

	SimpleExp -> Chained .                              (rule 34)

	']'            reduce using rule 34
	')'            reduce using rule 34
	','            reduce using rule 34
	"=="           reduce using rule 34
	"&&"           reduce using rule 34
	"||"           reduce using rule 34
	"!="           reduce using rule 34


State 50

	Chained -> ChainedBase .                            (rule 49)
	ChainedBase -> ChainedBase . '.' ident              (rule 52)
	ChainedBase -> ChainedBase . '.' ident '(' Args ')'    (rule 53)

	']'            reduce using rule 49
	')'            reduce using rule 49
	','            reduce using rule 49
	'.'            shift, and enter state 61
	"=="           reduce using rule 49
	"&&"           reduce using rule 49
	"||"           reduce using rule 49
	"!="           reduce using rule 49


State 51

	AtomicBool -> true .                                (rule 45)

	']'            reduce using rule 45
	')'            reduce using rule 45
	','            reduce using rule 45
	"&&"           reduce using rule 45
	"||"           reduce using rule 45


State 52

	AtomicBool -> false .                               (rule 46)

	']'            reduce using rule 46
	')'            reduce using rule 46
	','            reduce using rule 46
	"&&"           reduce using rule 46
	"||"           reduce using rule 46


State 53

	AtomicBool -> '(' . BoolExp ')'                     (rule 48)

	true           shift, and enter state 51
	false          shift, and enter state 52
	'('            shift, and enter state 53
	"!"            shift, and enter state 54
	ident          shift, and enter state 55
	number         shift, and enter state 56
	string         shift, and enter state 57

	SimpleExp      goto state 43
	ComparisonExp  goto state 44
	BoolExp        goto state 60
	AndExp         goto state 46
	NotExp         goto state 47
	AtomicBool     goto state 48
	Chained        goto state 49
	ChainedBase    goto state 50

State 54

	NotExp -> "!" . NotExp                              (rule 44)

	true           shift, and enter state 51
	false          shift, and enter state 52
	'('            shift, and enter state 53
	"!"            shift, and enter state 54
	ident          shift, and enter state 55
	number         shift, and enter state 56
	string         shift, and enter state 57

	SimpleExp      goto state 43
	ComparisonExp  goto state 44
	NotExp         goto state 59
	AtomicBool     goto state 48
	Chained        goto state 49
	ChainedBase    goto state 50

State 55

	ChainedBase -> ident .                              (rule 50)
	ChainedBase -> ident . '(' Args ')'                 (rule 51)

	']'            reduce using rule 50
	'('            shift, and enter state 58
	')'            reduce using rule 50
	','            reduce using rule 50
	'.'            reduce using rule 50
	"=="           reduce using rule 50
	"&&"           reduce using rule 50
	"||"           reduce using rule 50
	"!="           reduce using rule 50


State 56

	SimpleExp -> number .                               (rule 35)

	']'            reduce using rule 35
	')'            reduce using rule 35
	','            reduce using rule 35
	"=="           reduce using rule 35
	"&&"           reduce using rule 35
	"||"           reduce using rule 35
	"!="           reduce using rule 35


State 57

	SimpleExp -> string .                               (rule 36)

	']'            reduce using rule 36
	')'            reduce using rule 36
	','            reduce using rule 36
	"=="           reduce using rule 36
	"&&"           reduce using rule 36
	"||"           reduce using rule 36
	"!="           reduce using rule 36


State 58

	ChainedBase -> ident '(' . Args ')'                 (rule 51)

	')'            reduce using rule 54
	ident          shift, and enter state 92

	Args           goto state 91

State 59

	NotExp -> "!" NotExp .                              (rule 44)

	']'            reduce using rule 44
	')'            reduce using rule 44
	','            reduce using rule 44
	"&&"           reduce using rule 44
	"||"           reduce using rule 44


State 60

	BoolExp -> BoolExp . "||" AndExp                    (rule 40)
	AtomicBool -> '(' BoolExp . ')'                     (rule 48)

	')'            shift, and enter state 90
	"||"           shift, and enter state 64


State 61

	ChainedBase -> ChainedBase '.' . ident              (rule 52)
	ChainedBase -> ChainedBase '.' . ident '(' Args ')'    (rule 53)

	ident          shift, and enter state 89


State 62

	AndExp -> AndExp "&&" . NotExp                      (rule 42)

	true           shift, and enter state 51
	false          shift, and enter state 52
	'('            shift, and enter state 53
	"!"            shift, and enter state 54
	ident          shift, and enter state 55
	number         shift, and enter state 56
	string         shift, and enter state 57

	SimpleExp      goto state 43
	ComparisonExp  goto state 44
	NotExp         goto state 88
	AtomicBool     goto state 48
	Chained        goto state 49
	ChainedBase    goto state 50

State 63

	UnlockConditions -> BoolExp ',' . UnlockConditions    (rule 13)

	true           shift, and enter state 51
	false          shift, and enter state 52
	'('            shift, and enter state 53
	"!"            shift, and enter state 54
	ident          shift, and enter state 55
	number         shift, and enter state 56
	string         shift, and enter state 57

	UnlockConditionsgoto state 87
	SimpleExp      goto state 43
	ComparisonExp  goto state 44
	BoolExp        goto state 45
	AndExp         goto state 46
	NotExp         goto state 47
	AtomicBool     goto state 48
	Chained        goto state 49
	ChainedBase    goto state 50

State 64

	BoolExp -> BoolExp "||" . AndExp                    (rule 40)

	true           shift, and enter state 51
	false          shift, and enter state 52
	'('            shift, and enter state 53
	"!"            shift, and enter state 54
	ident          shift, and enter state 55
	number         shift, and enter state 56
	string         shift, and enter state 57

	SimpleExp      goto state 43
	ComparisonExp  goto state 44
	AndExp         goto state 86
	NotExp         goto state 47
	AtomicBool     goto state 48
	Chained        goto state 49
	ChainedBase    goto state 50

State 65

	ComparisonExp -> SimpleExp "==" . SimpleExp         (rule 37)

	ident          shift, and enter state 55
	number         shift, and enter state 56
	string         shift, and enter state 57

	SimpleExp      goto state 85
	Chained        goto state 49
	ChainedBase    goto state 50

State 66

	ComparisonExp -> SimpleExp "!=" . SimpleExp         (rule 38)

	ident          shift, and enter state 55
	number         shift, and enter state 56
	string         shift, and enter state 57

	SimpleExp      goto state 84
	Chained        goto state 49
	ChainedBase    goto state 50

State 67

	Declaration -> unlock ':' '[' UnlockConditions ']' .    (rule 11)

	unlock         reduce using rule 11
	elements       reduce using rule 11
	init           reduce using rule 11
	actions        reduce using rule 11
	'}'            reduce using rule 11


State 68

	Element -> type ident .                             (rule 27)

	']'            reduce using rule 27
	')'            reduce using rule 27
	','            reduce using rule 27


State 69

	Elements -> Element ',' . Elements                  (rule 26)

	']'            reduce using rule 24
	')'            reduce using rule 24
	type           shift, and enter state 41

	Elements       goto state 83
	Element        goto state 40

State 70

	Declaration -> elements ':' '[' Elements ']' .      (rule 8)

	unlock         reduce using rule 8
	elements       reduce using rule 8
	init           reduce using rule 8
	actions        reduce using rule 8
	'}'            reduce using rule 8


State 71

	Assignment -> ident '=' . Exp                       (rule 31)

	ident          shift, and enter state 55
	number         shift, and enter state 56
	string         shift, and enter state 57

	Exp            goto state 80
	SimpleExp      goto state 81
	ComparisonExp  goto state 82
	Chained        goto state 49
	ChainedBase    goto state 50

State 72

	Assignments -> Assignment ',' . Assignments         (rule 30)

	']'            reduce using rule 28
	ident          shift, and enter state 38

	Assignments    goto state 79
	Assignment     goto state 37

State 73

	Declaration -> init ':' '[' Assignments ']' .       (rule 9)

	unlock         reduce using rule 9
	elements       reduce using rule 9
	init           reduce using rule 9
	actions        reduce using rule 9
	'}'            reduce using rule 9


State 74

	Action -> ident '(' . Elements ')' ActionReturnType "->" Command    (rule 17)

	')'            reduce using rule 24
	type           shift, and enter state 41

	Elements       goto state 78
	Element        goto state 40

State 75

	Actions -> Action ',' . Actions                     (rule 16)

	']'            reduce using rule 14
	ident          shift, and enter state 35

	Actions        goto state 77
	Action         goto state 34

State 76

	Declaration -> actions ':' '[' Actions ']' .        (rule 10)

	unlock         reduce using rule 10
	elements       reduce using rule 10
	init           reduce using rule 10
	actions        reduce using rule 10
	'}'            reduce using rule 10


State 77

	Actions -> Action ',' Actions .                     (rule 16)

	']'            reduce using rule 16


State 78

	Action -> ident '(' Elements . ')' ActionReturnType "->" Command    (rule 17)

	')'            shift, and enter state 96


State 79

	Assignments -> Assignment ',' Assignments .         (rule 30)

	']'            reduce using rule 30


State 80

	Assignment -> ident '=' Exp .                       (rule 31)

	']'            reduce using rule 31
	','            reduce using rule 31


State 81

	Exp -> SimpleExp .                                  (rule 32)
	ComparisonExp -> SimpleExp . "==" SimpleExp         (rule 37)
	ComparisonExp -> SimpleExp . "!=" SimpleExp         (rule 38)

	']'            reduce using rule 32
	','            reduce using rule 32
	"=="           shift, and enter state 65
	"!="           shift, and enter state 66


State 82

	Exp -> ComparisonExp .                              (rule 33)

	']'            reduce using rule 33
	','            reduce using rule 33


State 83

	Elements -> Element ',' Elements .                  (rule 26)

	']'            reduce using rule 26
	')'            reduce using rule 26


State 84

	ComparisonExp -> SimpleExp "!=" SimpleExp .         (rule 38)

	']'            reduce using rule 38
	')'            reduce using rule 38
	','            reduce using rule 38
	"&&"           reduce using rule 38
	"||"           reduce using rule 38


State 85

	ComparisonExp -> SimpleExp "==" SimpleExp .         (rule 37)

	']'            reduce using rule 37
	')'            reduce using rule 37
	','            reduce using rule 37
	"&&"           reduce using rule 37
	"||"           reduce using rule 37


State 86

	BoolExp -> BoolExp "||" AndExp .                    (rule 40)
	AndExp -> AndExp . "&&" NotExp                      (rule 42)

	']'            reduce using rule 40
	')'            reduce using rule 40
	','            reduce using rule 40
	"&&"           shift, and enter state 62
	"||"           reduce using rule 40


State 87

	UnlockConditions -> BoolExp ',' UnlockConditions .    (rule 13)

	']'            reduce using rule 13


State 88

	AndExp -> AndExp "&&" NotExp .                      (rule 42)

	']'            reduce using rule 42
	')'            reduce using rule 42
	','            reduce using rule 42
	"&&"           reduce using rule 42
	"||"           reduce using rule 42


State 89

	ChainedBase -> ChainedBase '.' ident .              (rule 52)
	ChainedBase -> ChainedBase '.' ident . '(' Args ')'    (rule 53)

	']'            reduce using rule 52
	'('            shift, and enter state 95
	')'            reduce using rule 52
	','            reduce using rule 52
	'.'            reduce using rule 52
	"=="           reduce using rule 52
	"&&"           reduce using rule 52
	"||"           reduce using rule 52
	"!="           reduce using rule 52


State 90

	AtomicBool -> '(' BoolExp ')' .                     (rule 48)

	']'            reduce using rule 48
	')'            reduce using rule 48
	','            reduce using rule 48
	"&&"           reduce using rule 48
	"||"           reduce using rule 48


State 91

	ChainedBase -> ident '(' Args . ')'                 (rule 51)

	')'            shift, and enter state 94


State 92

	Args -> ident .                                     (rule 55)
	Args -> ident . ',' Args                            (rule 56)

	')'            reduce using rule 55
	','            shift, and enter state 93


State 93

	Args -> ident ',' . Args                            (rule 56)

	')'            reduce using rule 54
	ident          shift, and enter state 92

	Args           goto state 100

State 94

	ChainedBase -> ident '(' Args ')' .                 (rule 51)

	']'            reduce using rule 51
	')'            reduce using rule 51
	','            reduce using rule 51
	'.'            reduce using rule 51
	"=="           reduce using rule 51
	"&&"           reduce using rule 51
	"||"           reduce using rule 51
	"!="           reduce using rule 51


State 95

	ChainedBase -> ChainedBase '.' ident '(' . Args ')'    (rule 53)

	')'            reduce using rule 54
	ident          shift, and enter state 92

	Args           goto state 99

State 96

	Action -> ident '(' Elements ')' . ActionReturnType "->" Command    (rule 17)

	as             shift, and enter state 98
	"->"           reduce using rule 18

	ActionReturnTypegoto state 97

State 97

	Action -> ident '(' Elements ')' ActionReturnType . "->" Command    (rule 17)

	"->"           shift, and enter state 103


State 98

	ActionReturnType -> as . type                       (rule 19)

	type           shift, and enter state 102


State 99

	ChainedBase -> ChainedBase '.' ident '(' Args . ')'    (rule 53)

	')'            shift, and enter state 101


State 100

	Args -> ident ',' Args .                            (rule 56)

	')'            reduce using rule 56


State 101

	ChainedBase -> ChainedBase '.' ident '(' Args ')' .    (rule 53)

	']'            reduce using rule 53
	')'            reduce using rule 53
	','            reduce using rule 53
	'.'            reduce using rule 53
	"=="           reduce using rule 53
	"&&"           reduce using rule 53
	"||"           reduce using rule 53
	"!="           reduce using rule 53


State 102

	ActionReturnType -> as type .                       (rule 19)

	"->"           reduce using rule 19


State 103

	Action -> ident '(' Elements ')' ActionReturnType "->" . Command    (rule 17)

	return         shift, and enter state 107
	show           shift, and enter state 108
	ident          shift, and enter state 109

	Command        goto state 104
	Assignment     goto state 105
	ChainedBase    goto state 106

State 104

	Action -> ident '(' Elements ')' ActionReturnType "->" Command .    (rule 17)

	']'            reduce using rule 17
	','            reduce using rule 17


State 105

	Command -> Assignment .                             (rule 20)

	']'            reduce using rule 20
	','            reduce using rule 20


State 106

	Command -> ChainedBase .                            (rule 21)
	ChainedBase -> ChainedBase . '.' ident              (rule 52)
	ChainedBase -> ChainedBase . '.' ident '(' Args ')'    (rule 53)

	']'            reduce using rule 21
	','            reduce using rule 21
	'.'            shift, and enter state 61


State 107

	Command -> return . Exp                             (rule 22)

	ident          shift, and enter state 55
	number         shift, and enter state 56
	string         shift, and enter state 57

	Exp            goto state 111
	SimpleExp      goto state 81
	ComparisonExp  goto state 82
	Chained        goto state 49
	ChainedBase    goto state 50

State 108

	Command -> show . Exp                               (rule 23)

	ident          shift, and enter state 55
	number         shift, and enter state 56
	string         shift, and enter state 57

	Exp            goto state 110
	SimpleExp      goto state 81
	ComparisonExp  goto state 82
	Chained        goto state 49
	ChainedBase    goto state 50

State 109

	Assignment -> ident . '=' Exp                       (rule 31)
	ChainedBase -> ident .                              (rule 50)
	ChainedBase -> ident . '(' Args ')'                 (rule 51)

	']'            reduce using rule 50
	'('            shift, and enter state 58
	','            reduce using rule 50
	'='            shift, and enter state 71
	'.'            reduce using rule 50


State 110

	Command -> show Exp .                               (rule 23)

	']'            reduce using rule 23
	','            reduce using rule 23


State 111

	Command -> return Exp .                             (rule 22)

	']'            reduce using rule 22
	','            reduce using rule 22


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 57
Number of terminals: 32
Number of non-terminals: 24
Number of states: 112
